# rvl

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
include/: radio_vector_lib.hpp  rvl_core.hpp
src/antenna/: antenna_gain.hpp  array_factor.cpp  array_factor.hpp  current_distribution.cpp  current_distribution.hpp  dipole_impedance.hpp  dipole_radiation_pattern.hpp  dipole_resonant_frequency.hpp  helical_antenna.hpp  impedance_frequency.cpp  impedance_frequency.hpp  microstrip.hpp  mutual_impedance.hpp  near_field.hpp  radiation_efficiency.cpp  radiation_efficiency.hpp
src/core/: aligned_buffer.hpp  arena.hpp  constants.hpp  error.hpp  logging.hpp  memory_allocator.hpp  object_pool.hpp  simd_detection.hpp  units.hpp
src/feedline/: smith_chart.cpp  smith_chart.hpp  transmission_line_impedance.hpp  transmission_line_loss.hpp  twin_lead.hpp  vswr.hpp  waveguide.hpp
src/propagation/: atmospheric_attenuation.cpp  atmospheric_attenuation.hpp  deterministic_ray_tracing.cpp  deterministic_ray_tracing.hpp  ground_wave.cpp  ground_wave.hpp  group_phase_path.cpp  group_phase_path.hpp  hata_model.hpp  ionospheric_ray_tracing.cpp  ionospheric_ray_tracing.hpp  ionospheric_refractive_index.cpp  ionospheric_refractive_index.hpp  ionospheric_scintillation.cpp  ionospheric_scintillation.hpp  ray_trajectory.cpp  ray_trajectory.hpp  rayleigh_fading.cpp  rayleigh_fading.hpp  rician_fading.cpp  rician_fading.hpp  terrain_diffraction.cpp  terrain_diffraction.hpp  tropospheric_ducting.cpp  tropospheric_ducting.hpp  tropospheric_scatter.cpp  tropospheric_scatter.hpp  two_ray_model.cpp  two_ray_model.hpp
src/propagation/free_space/: friis.hpp  friis_polarization.hpp  fspl.hpp
src/propagation/ground_wave/: ground_wave_loss.hpp
src/propagation/tropospheric/: ducting.hpp
src/rf_systems/: intermodulation.hpp  link_budget.cpp  link_budget.hpp  phase_noise.hpp  scattering_parameters.hpp
tests/: CMakeLists.txt  run_all_tests.sh  test_antenna_array.cpp  test_antenna_dipole.cpp  test_antenna_efficiency.cpp  test_feedline_smith_chart.cpp  test_feedline_twin_lead.cpp  test_feedline_vswr.cpp  test_ionospheric_propagation.cpp  test_propagation_free_space.cpp  test_rf_systems_link_budget.cpp  test_transmission_line.cpp  test_tropospheric_propagation.cpp  test_utils.hpp
tests/unit/antenna_tests/: test_antenna_design_foundations.cpp
tests/unit/core_tests/: test_advanced_equations_batch1.cpp  test_advanced_equations_batch2.cpp  test_basic_equations.cpp  test_build_verification.cpp
tests/unit/propagation_tests/: test_ionospheric_equations.cpp  test_ionospheric_equations_simple.cpp  test_ionospheric_ray_tracing.cpp  test_multipath_fading.cpp  test_tropospheric_ground_wave.cpp  test_tropospheric_scatter.cpp
